--- a/home.html
+++ b/home.html
@@ -242,8 +242,8 @@
             top: 84%;
             left: 3%;
             transform: translateY(-50%);
-            width: 555px;
-            height: 100px; /* Fixed height */
+            width: 30%;
+            height: 20%; /* Fixed height */
             background-color: rgba(255, 255, 255, 0.5);
             padding: 20px;
             border-radius: 10px;
